2013-01-12  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix in the MP4 reader: Fixed language code
        conversion from what is used in MP4 to the ISO 639-2 codes used in
        Matroska (e.g. convert from "deu" to "ger").

        * Source distribution: source code archives (tarballs) will be
        compressed with xz instead of bzip2 from now on. The file name's
        extension will therefore change from ".tar.bz2" to ".tar.xz". The
        download URL changes accordingly.

2013-01-11  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: new feature: Implemented reading VobSubs from MP4
        files if they're stored in the Nero Digital way (track sub-type
        'mp4s', ESDS object type identifier 0xe0). Implements #821 and the
        second half of #815.

2013-01-08  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: new feature: Command line options can be saved as default
        for new jobs by clicking a check box in the "add command line
        options" dialog.

2013-01-02  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: Fixed a crash in the chapter editor if the root
        was selected and the user used the "Set values" button.

2013-01-01  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge, mmg: removal: The 'header removal compression' method
        is not turned on by default anymore. This affects the following
        track types: AC3, AVC/h.264, Dirac, DTS, MP3. The setting in mmg
        that turned it off by default has been removed.

2012-12-31  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: new feature: Added experimental support for the Opus
        audio codec. Parts of an implementation of #779.

2012-12-28  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: "text"-type tracks in MP4 files are only
        treated as chapters if their track ID is listed on a "chap" atom
        inside a "tref" track reference atom. Fixes #815.
